# ctypes-modbus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  benchmark.csv  compose.yml  pyproject.toml
benchmarks/: _ctypes_modbus.py  _pylibmodbus.py  _pymodbus.py  constants.py
ctypes_modbus/: __init__.py  client.py
ctypes_modbus/bindings/: __init__.py  modbus.py  modbus_rtu.py  modbus_tcp.py
scripts/: bench.py  plot.py
tests/: conftest.py  test_bindings.py  test_client.py
